--- a/login/ventas/templates/ventas/lista_todas_ventas.html
+++ b/login/ventas/templates/ventas/lista_todas_ventas.html
@@ -42,6 +42,7 @@
                 {% endfor %}
             </tbody>
         </table>
+        <a href="{% url 'agregar_venta' %}">Nueva venta</a>
     </div>
 </body>
 </html>
