--- a/login/core/templates/core/base.html
+++ b/login/core/templates/core/base.html
@@ -16,6 +16,9 @@
                 <li><a href="{% url 'home' %}">Inicio</a></li>
                 <li><a href="{% url 'products' %}">Productos</a></li>
                 {% if user.is_authenticated %}
+                    <li><a href="{% url 'informacion' %}">Información</a></li>
+                    <li><a href="{% url 'pase_batalla' %}">Pase de Batalla</a></li>
+                    <li><a href="{% url 'dashboard' %}"> Dashboard</a></li>
                     <li><a href="{% url 'exit' %}">Salir</a></li>
                 {% else %}
                     <li><a href="{% url 'login' %}">Ingresar</a></li>
