--- a/login/core/templates/core/home.html
+++ b/login/core/templates/core/home.html
@@ -1,4 +1,5 @@
 {% extends 'core/base.html' %}
+{% load static custom_filters %}
 
 {% block content %} 
 
@@ -15,63 +16,22 @@
                 <br>
                 Saldo de regalo: {{ saldo_regalo }}
                 <br>
-                <div class="container">
-                    <div class="table-container">
-                        <h2>Torneos</h2>
-                        <table border="1">
-                            <thead>
-                                <tr>
-                                    <th>Nombre de Torneo</th>
-                                    <th>Entrada</th>
-                                    <th>Premio</th>
-                                    <th>Posición</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for torneo in torneos_usuario %}
-                                    <tr>
-                                        <td>{{ torneo.nombre }}</td>
-                                        <td>{{ torneo.entrada }}</td>
-                                        <td>{{ torneo.premio }}</td>
-                                        <td>{{ torneo.posicion }}</td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                    
-                    <div class="table-container">
-                        <h2>Intercambios</h2>
-                        <table border="1">
-                            <thead>
-                                <tr>
-                                    <th>Artículo</th>
-                                    <th>Monto</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for intercambio in intercambios_usuario %}
-                                    <tr>
-                                        <td>{{ intercambio.articulo }}</td>
-                                        <td>{{ intercambio.monto }}</td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+                Puntos pase pokémon: {{ puntos_pase_pkm }}
+                <br>
+                Puntos pase Yu-Gi-Oh: {{ puntos_pase_yugioh }}
+                <br>
+                Puntos pase Magic: {{ puntos_pase_magic }}
+
             {% else %}
                 Bienvenido, visitante
             {% endif %}
         </h4>
     </div>
-    <div class="sidebar">
-        <h3>Videos de YouTube</h3>
-        <ul class="video-list">
-            <!-- Aquí se generarán dinámicamente los videos -->
-        </ul>
+    <div class="youtube-playlist-container">
+        <h1>Mi Lista de Reproducción de YouTube</h1>
+        <div id="video-container" class="video-container"></div>
     </div>
 </div>
-{% load static %}
+
 <script src="{% static 'js/scripts.js' %}"></script>
 {% endblock %}
