--- a/login/core/templates/core/dashboard.html
+++ b/login/core/templates/core/dashboard.html
@@ -15,6 +15,7 @@
         <a href="{% url 'torneo_list' %}">Torneos</a><br>
         <a href="{% url 'lista_todas_ventas' %}">Ventas</a><br>
         <a href="{% url 'users_list' %}">Usuarios</a><br>
+        <a href="{% url 'post_list' %}">Blog</a><br>
     </ul>
 </body>
 </html>
