--- a/login/torneos/templates/torneos/detalle_torneo.html
+++ b/login/torneos/templates/torneos/detalle_torneo.html
@@ -39,6 +39,9 @@
                 {% endfor %}
             </tbody>
         </table>
+        
+        <p>Ganancias del Torneo: {{ ganancias_torneos }}</p>  <!-- Mostrar ganancias_torneos -->
+
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
