--- a/login/core/templates/core/manage_points.html
+++ b/login/core/templates/core/manage_points.html
@@ -6,7 +6,7 @@
     {% csrf_token %}
     <div class="form-group">
         <label for="user">Usuario:</label>
-        <select name="user" id="user" class="form-control">
+        <select name="user" id="user" class="form-control-puntos">
             {% for user in users %}
                 <option value="{{ user.id }}">{{ user.username }}</option>
             {% endfor %}
@@ -14,19 +14,19 @@
     </div>
     <div class="form-group">
         <label for="puntos_pokemon">Puntos Pokémon:</label>
-        <input type="number" name="puntos_pokemon" id="puntos_pokemon" class="form-control" value="0">
+        <input type="number" name="puntos_pokemon" id="puntos_pokemon" class="form-control-puntos" value="0">
     </div>
     <div class="form-group">
         <label for="puntos_yugioh">Puntos Yu-Gi-Oh!:</label>
-        <input type="number" name="puntos_yugioh" id="puntos_yugioh" class="form-control" value="0">
+        <input type="number" name="puntos_yugioh" id="puntos_yugioh" class="form-control-puntos" value="0">
     </div>
     <div class="form-group">
         <label for="puntos_magic">Puntos Magic:</label>
-        <input type="number" name="puntos_magic" id="puntos_magic" class="form-control" value="0">
+        <input type="number" name="puntos_magic" id="puntos_magic" class="form-control-puntos" value="0">
     </div>
     <div class="form-group">
         <label for="concepto">Concepto:</label>
-        <input type="text" name="concepto" id="concepto" class="form-control">
+        <input type="text" name="concepto" id="concepto" class="form-control-puntos">
     </div>
     <button type="submit" class="btn btn-primary">Actualizar Puntos</button>
 </form>
