--- a/login/torneos/templates/torneos/crear_torneo.html
+++ b/login/torneos/templates/torneos/crear_torneo.html
@@ -67,7 +67,7 @@
             const emptyRow = document.querySelector('.form-row').cloneNode(true);
             emptyRow.querySelectorAll('input').forEach(input => input.value = '');
             let formIndex = tableBody.children.length;
-
+    
             addRowButton.addEventListener('click', function() {
                 const newRow = emptyRow.cloneNode(true);
                 newRow.querySelectorAll('input, select').forEach((input) => {
@@ -75,12 +75,13 @@
                     const id = input.id.replace(/-\d+-/, `-${formIndex}-`);
                     input.name = name;
                     input.id = id;
+                    input.value = ''; // Limpiar el valor del campo de entrada
                 });
                 tableBody.appendChild(newRow);
                 formIndex++;
                 updateManagementForm();
             });
-
+    
             tableBody.addEventListener('click', function(event) {
                 if (event.target.classList.contains('remove-row')) {
                     const row = event.target.closest('tr');
@@ -88,13 +89,22 @@
                     updateManagementForm();
                 }
             });
-
+    
             function updateManagementForm() {
                 const totalForms = document.querySelectorAll('.form-row').length;
                 document.querySelector('#id_form-TOTAL_FORMS').value = totalForms;
+                // Actualizar los índices de los formularios restantes
+                document.querySelectorAll('.form-row').forEach((row, index) => {
+                    row.querySelectorAll('input, select').forEach((input) => {
+                        const name = input.name.replace(/-\d+-/, `-${index}-`);
+                        const id = input.id.replace(/-\d+-/, `-${index}-`);
+                        input.name = name;
+                        input.id = id;
+                    });
+                });
             }
         });
-    </script>
+    </script>    
 </body>
 </html>
 {% endblock %}
