--- a/login/core/templates/static/css/styles.css
+++ b/login/core/templates/static/css/styles.css
@@ -358,32 +358,43 @@ table td form button {
     width: 1800px;
 }
 
-/* Estilos para el modal */
-#qrModal {
+#barcodeModal {
+    display: none;
     position: fixed;
-    top: 0;
+    z-index: 1;
     left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: none;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
     justify-content: center;
     align-items: center;
 }
 
-#qrContent {
-    background-color: white;
+#barcodeContent {
+    background-color: #fefefe;
+    margin: auto;
     padding: 20px;
-    border-radius: 10px;
-    position: relative;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
 #closeBtn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
+    color: #aaa;
+    align-self: flex-end;
+    font-size: 28px;
+    font-weight: bold;
 }
-#qrImage {
-    max-width: 100%;
-    height: auto;
+
+#closeBtn:hover,
+#closeBtn:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
